[gd_scene load_steps=6 format=2]

[ext_resource path="res://Clay_pot.gd" type="Script" id=1]
[ext_resource path="res://assets/tileset/Assets.png" type="Texture" id=2]
[ext_resource path="res://sound effects/pot/soundsnap_291369_porcelainplatesinclothbag14.mp3" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.9001, 30.059 )

[sub_resource type="Animation" id=2]
resource_name = "Destroyed"
length = 0.42
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[node name="Clay_pot" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 5
region_enabled = true
region_rect = Rect2( 1224, 0, 248, 64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.735779, 1.6818 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 1
anims/Destroyed = SubResource( 2 )

[node name="SoundPotBreak" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0

[connection signal="area_entered" from="." to="." method="_on_Clay_pot_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
